--- a/mission/styles/mission_style.css
+++ b/mission/styles/mission_style.css
@@ -1,7 +1,4 @@
-
-/* Viewport, description, author, and charset
-
-Responsive Design */
+/* Mission Statement Page Stylesheet */
 
 body {
     font-family: "Georgie", "Times New Roman", serif;
